# bitcoiner-intro-to-rust

./: 01_background.md  02_setup.md  03_our_first_function.md  04_hex_and_bytes.md  05_vectors_and_result_enum.md  05_vectors_and_results.md  06_pointers.md  06_pointers_and_slices.md  07_arrays_and_conversions.md  08_traits_and_reading_bytes.md  09_00_mutable_references.md  09_01_shared_references.md  09_references_and_borrowing.md  09_references_and_borrowing_01.md  09_references_and_borrowing_02.md  10_compact_size_unsigned_integers.md  11_unit_testing.md  12_reading_inputs_and_type_coercion.md  13_structs.md  14_json_serialization.md  15_reading_outputs_and_tuple_structs.md  16_custom_serialization_and_generic_functions.md  17_file_organization_and_modules.md  18_decoding_legacy_transaction.md  18_final_decoding_legacy_transaction.md  19_error_handling.md  20_command_line_arguments.md  21_refactoring_and_rust_bitcoin.md  22_decoding_segwit.md  README.md
code/transaction_decoder_10/: Cargo.toml
code/transaction_decoder_11/: Cargo.toml
code/transaction_decoder_12/: Cargo.toml
code/transaction_decoder_13/: Cargo.toml
code/transaction_decoder_14/: Cargo.toml
code/transaction_decoder_22/: Cargo.toml
code/transaction_decoder_22/src/: lib.rs  main.rs  transaction.rs
code/transaction_decoder_22/tests/: integration_test.rs  test_transaction_legacy.json  test_transaction_segwit.json
quiz_solutions/: 04_solution.md  05_solution.md  06_solution.md  07_solution.md  08_solution.md  09_00_solution.md  09_01_solution.md  09_solution.md  10_solution.md
(+38 files in other folders)
